# zenmail

./: Cargo.toml
src/: main.rs  messages.rs  parser.rs  state.rs
