[package]
name = "zenmail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
eyre = "0.6.8"
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros", "net", "io-util"] }
tracing = "0.1.39"
tracing-subscriber = "0.3.17"
